# gitHub1

./: CMakeLists.txt  Client.cpp  Server.cpp  main.cpp
Tests/: BeginningInfoReaderTest.cpp  ClassName.h  DriverTest.cpp  GpsTest.cpp  GridNodeTest.cpp  GridTest.cpp  LaxuryCabTest.cpp  PassengerTest.cpp  PoinTest.cpp  StandartCabTest.cpp  TaxiCenterTest.cpp  TripInformationTest.cpp  bfsTest.cpp  test.cpp
src/: BaseCab.cpp  BaseCab.h  BeginningInfoReader.cpp  BeginningInfoReader.h  Bfs.cpp  Bfs.h  Color.h  Driver.cpp  Driver.h  Gps.cpp  Gps.h  Grid.cpp  Grid.h  GridNode.cpp  GridNode.h  LuxuryCab.cpp  LuxuryCab.h  MainFlow.cpp  MainFlow.h  Manufacturer.h  MaritalStatus.h  Passenger.cpp  Passenger.h  Point.cpp  Point.h  StandardCab.cpp  StandardCab.h  Structure.h  TaxiCenter.cpp  TaxiCenter.h  TripInformation.cpp  TripInformation.h  main.cpp
